# omnilang

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  omni.toml  omni.toml.example
.github/: pull_request_template.md
.github/actions/setup-omni/: action.yml
.github/issue_template/: bug_report.md  feature_request.md  rfs_proposal.md
.github/workflows/: ci.yml  release.yml
crates/omni-analyzer/: Cargo.toml
crates/omni-analyzer/src/: constraints.rs  deps.rs  formal.rs  gap_detector.rs  ir.rs  lib.rs  module_system.rs  policy.rs  schema.rs  symbols.rs  type_check.rs  type_mapping.rs  workflow.rs
crates/omni-analyzer/tests/: export_types.rs
crates/omni-cli/: Cargo.toml
crates/omni-cli/src/: main.rs
crates/omni-lsp/: Cargo.toml
crates/omni-lsp/src/: main.rs
crates/omni-parser/: Cargo.toml
crates/omni-parser/src/: ast.rs  error.rs  lexer.rs  lib.rs  parser.rs  span.rs  token.rs
docs/: 00-vision.md  01-architecture.md  02-core-concepts.md  03-type-system.md  04-syntax-reference.md  05-compilation-model.md  06-testing-verification.md  07-module-system.md  08-agent-protocol.md  09-tooling-ide.md  10-examples.md  11-roadmap.md  12-glossary.md  13-ecosystem.md  14-runtime-interpretation.md  15-target-languages.md  16-ci_testing.md  17-hybrid_approach.md  README.md  index.html  openapi.json  runbook.md
editors/vscode/: package.json
editors/vscode/syntaxes/: omnilang.tmLanguage.json
examples/: blocks.omni  booking_flow.omni  checkout.omni  full_stack_ordering.omni  hybrid_billing.omni  self_correction.omni  self_correction_demo.omni  simple_greet.omni  stabilization_test.schema.omni
runtime/: .gitignore  package.json  tsconfig.json
runtime/src/: budget.ts  docs.ts  improve.ts  index.ts  orchestrator.ts  types.ts  verify.ts  wire.ts
runtime/src/agents/: codegen.ts  parallel.ts  registry.ts
runtime/src/omwf/: grammar.ts  index.ts  serializer.ts
runtime/src/playground/: server.ts
runtime/src/plugins/: base.ts  prisma.ts  sql.ts
runtime/src/prompts/: codegen.ts
runtime/tests/: budget.test.ts  codegen.test.ts  improve.test.ts  integration.test.ts  parallel.test.ts  plugins.test.ts  prisma.test.ts  prompt_templates.test.ts  providers.test.ts  registry.test.ts  type_consistency.test.ts  verify.test.ts
scripts/: demo-self-correction.ts  install.sh  test-real-llm.ts
scripts/homebrew/: omni.rb
scripts/npm/: package.json
tree-sitter-omnilang/: Cargo.toml  Makefile  Package.swift  binding.gyp  grammar.js  package.json  pyproject.toml  setup.py
tree-sitter-omnilang/queries/: folds.scm  highlights.scm
tree-sitter-omnilang/src/: grammar.json  node-types.json  parser.c
(+31 files in other folders)
