[workspace]
resolver = "2"
members = [
    "crates/omni-parser",
    "crates/omni-analyzer",
    "crates/omni-cli",
    "crates/omni-lsp",
]
exclude = ["build", "runtime/build"]

[workspace.package]
version = "0.7.0"
edition = "2024"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/denelvis/omnilang"
homepage = "https://omnilang.dev"
description = "OmniLang — the specification language for AI-native development"
rust-version = "1.85"

[workspace.dependencies]
# Shared dependencies across crates
thiserror = "2"
miette = { version = "7", features = ["fancy"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
