[package]
name = "omni-analyzer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Semantic analyzer for OmniLang: type checking, constraint resolution, dependency graphing"

[dependencies]
omni-parser = { path = "../omni-parser" }
thiserror = { workspace = true }
miette = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
specta = { workspace = true }
