[package]
name = "omni-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Language Server Protocol implementation for OmniLang"

[[bin]]
name = "omni-lsp"
path = "src/main.rs"

[dependencies]
omni-parser = { path = "../omni-parser" }
omni-analyzer = { path = "../omni-analyzer" }
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
