[package]
name = "omni-parser"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Lexer and parser for the OmniLang specification language"

[dependencies]
thiserror = { workspace = true }
miette = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
insta = { version = "1", features = ["yaml"] }
